--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-		xmlns:android="http://schemas.android.com/apk/res/android"
-		xmlns:tools="http://schemas.android.com/tools"
-		xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	tools:context="com.wojciechkolendo.loadingview.MainActivity"
+	tools:ignore="HardcodedText,RtlHardcoded">
+
+	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		tools:context="com.wojciechkolendo.loadingview.MainActivity">
+		android:gravity="center_horizontal"
+		android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="24dp"
+			android:gravity="center"
+			android:orientation="horizontal">
+
+			<com.wojciechkolendo.loadingview.LoadingView
+				android:id="@+id/loadingView1"
+				android:layout_width="40dp"
+				android:layout_height="40dp"
+				android:layout_margin="24dp"
+				android:visibility="invisible"
+				app:loading_color="@color/design_default_color_primary"
+				app:loading_thickness="4dp"
+				tools:visibility="visible" />
+
+			<View
+				android:layout_width="1dp"
+				android:layout_height="match_parent"
+				android:background="#1F000000" />
+
+			<com.wojciechkolendo.loadingview.LoadingView
+				android:id="@+id/loadingView2"
+				android:layout_width="40dp"
+				android:layout_height="40dp"
+				android:layout_margin="24dp"
+				android:visibility="invisible"
+				app:loading_animDuration="1000"
+				app:loading_color="@color/colorAccent"
+				app:loading_thickness="2dp"
+				tools:visibility="visible" />
+
+		</LinearLayout>
+
+		<View
+			android:layout_width="match_parent"
+			android:layout_height="1dp"
+			android:background="#1F000000" />
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:gravity="center"
+			android:orientation="horizontal">
+
+			<com.wojciechkolendo.loadingview.LoadingView
+				android:id="@+id/loadingView3"
+				android:layout_width="80dp"
+				android:layout_height="80dp"
+				android:layout_margin="24dp"
+				android:visibility="invisible"
+				app:loading_color="@color/colorPrimary"
+				app:loading_thickness="8dp"
+				tools:visibility="visible" />
+
+			<View
+				android:layout_width="1dp"
+				android:layout_height="match_parent"
+				android:background="#1F000000" />
+
+
+			<com.wojciechkolendo.loadingview.LoadingView
+				android:id="@+id/loadingView4"
+				android:layout_width="80dp"
+				android:layout_height="80dp"
+				android:layout_margin="24dp"
+				android:visibility="invisible"
+				app:loading_animDuration="10000"
+				app:loading_color="#000000"
+				app:loading_thickness="2dp"
+				tools:visibility="visible" />
+
+		</LinearLayout>
+
+		<View
+			android:layout_width="match_parent"
+			android:layout_height="1dp"
+			android:background="#1F000000" />
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:gravity="center"
+			android:orientation="horizontal">
+
+			<com.wojciechkolendo.loadingview.LoadingView
+				android:id="@+id/loadingView5"
+				android:layout_width="120dp"
+				android:layout_height="120dp"
+				android:layout_margin="24dp"
+				android:visibility="invisible"
+				app:loading_animDuration="20000"
+				app:loading_color="#FDD835"
+				app:loading_thickness="12dp"
+				tools:visibility="visible" />
+
+			<View
+				android:layout_width="1dp"
+				android:layout_height="match_parent"
+				android:background="#1F000000" />
+
+
+			<com.wojciechkolendo.loadingview.LoadingView
+				android:id="@+id/loadingView6"
+				android:layout_width="120dp"
+				android:layout_height="120dp"
+				android:layout_margin="24dp"
+				android:visibility="invisible"
+				app:loading_color="#304FFE"
+				app:loading_thickness="4dp"
+				tools:visibility="visible" />
+
+		</LinearLayout>
+
+		<View
+			android:layout_width="match_parent"
+			android:layout_height="1dp"
+			android:background="#1F000000" />
+
+		<com.google.android.material.button.MaterialButton
+			android:id="@+id/button"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_margin="24dp"
+			android:text="Toggle loadings" />
+
+	</LinearLayout>
+
+	<com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+		android:id="@+id/dialogButton"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="bottom|right"
+		android:layout_margin="16dp"
+		android:text="loading dialog"
+		app:icon="@drawable/ic_play_arrow_black_24dp" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
